--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,10 +15,86 @@
   <![endif]-->
 </head>
 
-  <body>
+<body>
+  <nav>
+    <a href="services.html">Services</a>
+    <a href="">Product</a>
+    <a href="">Vision</a>
+    <a href="">Features</a>
+    <a href="">About</a>
+    <a href="">Contact</a>
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  </nav>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+
+  <header>
+    <div class="left-header">
+      <h1>Innovation<br> On<br> Demand
+      </h1>
+      <span>Get Started</span>
+    </div>
+
+    <div class="right-header">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </header>
+
+  <section class="top-features">
+    <div class="features">
+      <h2>Features</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+
+    <div class="about">
+      <h3>About</h3>
+      <p>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+        ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </section>
+
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <section>
+
+    <section class="bottom-features"> 
+    <div class="services">
+      <h3>Services</h3>
+      <p>
+        Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+        ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+
+    <div class="products">
+      <h3 >Product</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+
+    <div class="vision">
+      <h3 >Vision</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse
+        eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+      </p>
+    </div>
+  </section>
+
+  <footer>
+    <contact>
+      <h3>Contact</h3> 
+      123 Way 456 Street<br> 
+      Somewhere, USA <br>
+      <span>1 (888) 888-8888</span> <br>
+      sales@greatidea.io
+    </contact>
+
+    <p>Copyright Great Idea! 2018</p>
+
+  </footer>
+</body>
+
 </html>
